--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
+    "astro-pagefind": "^1.8.4",
     "daisyui": "^5.0.51",
     "tailwindcss": "^4.1.12"
   }
